sistemato copertina e tabella in 3.4.4

--- a/DocumentiInterni/NormeDiProgetto/src/Comandi.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/Comandi.tex
@@ -3,8 +3,8 @@
 \newcommand{\Prodotto}{TODO}
 
 \newcommand{\Approvatore}{TODO}
-\newcommand{\Redattori}{Alessio Trevisan \newline Edoardo Caregnato \newline Filippo Pinton}
-\newcommand{\Verificatori}{Elvis \newline TODO}
+\newcommand{\Redattori}{Alessio Trevisan \newline Edoardo Caregnato \newline Filippo Pinton \\}
+\newcommand{\Verificatori}{Elvis Murtezan \newline Abdelwahad kandoul \newline Giovanni Grigoletto \newline Andrea De Tomasi \\}
 
 \newcommand{\pathimg}{../../Shared/logo.png}
 
@@ -14,7 +14,7 @@
 
 \newcommand{\Uso}{Interno}
 
-\newcommand{\DescrizioneDoc}{TODO.}
+\newcommand{\DescrizioneDoc}{Questo documento racchiude le regole, gli strumenti e le convenzioni adottate dal gruppo {\Gruppo} durante la realizzazione del progetto {\NomeProgetto}.}
 
 \newcommand{\myparagraph}[1]{\paragraph{#1}}
 \newcommand{\mysubparagraph}[1]{\subparagraph{#1}}
