--- a/Shared/Sweleven.sty
+++ b/Shared/Sweleven.sty
@@ -125,8 +125,8 @@
 
 % variabili - altro
 
-\newcommand{\Mail}{TODO}
-\newcommand{\proponente}{TODO}
+\newcommand{\Mail}{swegroup11@gmail.com}
+\newcommand{\proponente}{Imola Informatica}
 \newcommand{\committenti}{Tullio Vardanega e Riccardo Cardin}
 
 \newcommand{\RR}{Revisione dei Requisiti}
@@ -134,7 +134,7 @@
 \newcommand{\RQ}{Revisione di Qualifica}
 \newcommand{\RA}{Revisione di Accettazione}
 
-\newcommand{\NomeProgetto}{TODO}
+\newcommand{\NomeProgetto}{BlockCovid}
 
 \newcommand{\glo}[1]{\textit{#1}\ped{G}}
 
@@ -187,7 +187,7 @@
 			\vspace{9pt}  
 			
 			\begin{large}
-				\textbf{Gruppo \Gruppo{}\ - Progetto \NomeProgetto{}}
+				\textbf{Gruppo \Gruppo{}\ - Progetto \NomeProgetto{} \\}
 				\vspace{6pt}
 				\Mail{}
 			\end{large}	  
