--- a/DocumentiEsterni/PianoDiQualifica/src/Autovalutazione/main.tex
+++ b/DocumentiEsterni/PianoDiQualifica/src/Autovalutazione/main.tex
@@ -9,10 +9,10 @@ I problemi analizzati riguardano:
 	\item \textbf{Strumenti di lavoro}: problemi relativi all’impiego degli strumenti di lavoro scelti.
 \end{itemize}
 
-Non essendo presente una figura esterna che possa fornire una valutazione oggettiva, pertrattare con cognizione 
+Non essendo presente una figura esterna che possa fornire una valutazione oggettiva, per trattare con cognizione 
 di causa ogni punto sopra descritto, fondamentale è l’autovalutazione di ciascun membro del gruppo. Nonostante possa 
 sembrare un sistema poco efficace il suo impiego ha permesso al gruppo di migliorare progressivamente la qualità del lavoro. 
-Questa sezione attualmente risulta incompleta, verrà aggiornata con l’avanzamento del la-voro riportando nuove problematiche, 
+Questa sezione attualmente risulta incompleta, verrà aggiornata con l’avanzamento del lavoro riportando nuove problematiche, 
 ogni qual volta esse dovessero verificarsi. Di seguito sono esposte le difficoltà relative all’organizzazione, ai ruoli e agli strumenti 
 adoperati per lo svolgimento del lavoro. Per fornire valutazioni facilmente leggibili e consultabili esse sono organizzate mediante tabelle 
 la cui struttura è stabilita in \textit{Norme di Progetto v1.0.0}. 
