--- a/DocumentiEsterni/PianoDiQualifica/src/Autovalutazione/src/Valutazione_organizzazione.tex
+++ b/DocumentiEsterni/PianoDiQualifica/src/Autovalutazione/src/Valutazione_organizzazione.tex
@@ -10,8 +10,7 @@
     {\centering\textbf{Gravità}} & \textcolor{\secondaryColor}{\centering\textbf{Soluzione}}\\
    
     Incontro con il gruppo  
-    & Non ci sono stati grossi problemi nell’organizzazione degli incontri 
-    anche se alcuni componenti del gruppo hanno molti impegni.  
+    & Non ci sono stati grossi problemi nell’organizzazione degli incontri. 
     & 1  
     & Si è deciso di utilizzare un
     calendario condiviso per scegliere il giorno in cui tutto il
@@ -21,6 +20,6 @@
     gli incontri sono stati fatti via zoom. 
     & 1
     & L’azienda proponente non ha avuto molte difficoltà a proporci 
-    diversi orari per i nostri incontri affinché l’intero gruppo sia presente.{} \\
+    diversi orari per i nostri incontri affinché l’intero gruppo fosse presente.{} \\
     \end{longtable}
 \end{table}
