--- a/DocumentiEsterni/PianoDiQualifica/src/Autovalutazione/src/Valutazione_ruoli.tex
+++ b/DocumentiEsterni/PianoDiQualifica/src/Autovalutazione/src/Valutazione_ruoli.tex
@@ -14,8 +14,8 @@
     & 1  
     & Testo . {} \\
     Rivestire il ruolo di \textit{Analista}
-    & Testo 
-    & 1
-    &  Testo {} \\
+    & Difficolt\`{a} nell'individuazione dei casi d'uso che ha causato una sottostima del carico di lavoro degli analisti.
+    & 3
+    & Aumentare il carico di lavoro e il numero degli analisti. \\
     \end{longtable}
 \end{table}
