--- a/DocumentiEsterni/PianoDiQualifica/src/Autovalutazione/src/Valutazione_strumenti.tex
+++ b/DocumentiEsterni/PianoDiQualifica/src/Autovalutazione/src/Valutazione_strumenti.tex
@@ -21,5 +21,11 @@
     & 2
     & Il gruppo ha deciso di avere un unico ramo main che contiene la versione stabile del proprio 
     lavoro e branch dedicati su cui lavorare. {} \\
+    Jira
+    & Alcuni componenti del gruppo hanno avuto diverse difficoltà nell’utilizzo 
+    dello strumento di issue tracking non avendo molta esperienza con esso. 
+    & 2
+    & Per risolvere questo problema, i componenti più esperti del gruppo hanno 
+    aiutato i colleghi meno esperti affinché il lavoro procedesse senza troppi ritardi. {} \\
     \end{longtable}
 \end{table}
