--- a/DocumentiEsterni/PianoDiQualifica/src/QualitaDiProdotto/src/src/Usabilita/src/Metriche.tex
+++ b/DocumentiEsterni/PianoDiQualifica/src/QualitaDiProdotto/src/src/Usabilita/src/Metriche.tex
@@ -1,5 +1,5 @@
 \paragraph{Comprensibilità delle funzioni offerte}
-indica la percentuale di operazioni comprese in modo immediato dall’utente, senza la consultazione del manuale.
+indica la percentuale di operazioni comprese in modo immediato dall’utente senza la consultazione del manuale.
 	\begin{itemize}
 	    \item misurazione: si calcola con la seguente formula: \\
 		\centerline{ CFO =  \(\frac{N\textsubscript{FC}}{N\textsubscript{FO}} \)$ \cdot 100$ }
@@ -19,7 +19,7 @@ indica la percentuale di operazioni comprese in modo immediato dall’utente, se
 
     \paragraph{Tolleranza agli errori}
     indica il livello di tolleranza del prodotto relativamente agli errori commessi dagli 
-    utenti. Si tratta di condizioni di errore frequente che il software può rilevare, correggere, correggere automaticamente e segnalare con un opportuno messaggio.
+    utenti. Si tratta di condizioni di errore frequente che il software può rilevare, correggere automaticamente e segnalare con un opportuno messaggio.
 	\begin{itemize}
 	    \item misurazione: si calcola con la seguente formula: \\
 		\centerline{ TE =  \(\frac{N\textsubscript{MC}}{N\textsubscript{MT}} \)$ \cdot 100$ }
