--- a/DocumentiEsterni/PianoDiQualifica/src/StandardQualita/main.tex
+++ b/DocumentiEsterni/PianoDiQualifica/src/StandardQualita/main.tex
@@ -26,8 +26,8 @@
 		Capacità del software di soddisfare i requisiti, descritti nell'Analisi dei Requisiti, in un determinato contesto.\\
 		Nello specifico il software deve soddisfare le seguenti caratteristiche:
 		\begin{itemize}
-			\item \textbf{Adeguatezza}: capacità di fornire funzioni adeguate per attività specifiche, che permettano di raggiungere gli obiettivi prefissati;
-			\item \textbf{Accuratezza}: capacità di fornire i risultati concordati o la precisione richiesta;
+			\item \textbf{Adeguatezza}: capacità di fornire funzioni adeguate per attività specifiche che permettano di raggiungere gli obiettivi prefissati;
+			\item \textbf{Accuratezza}: capacità di fornire i risultati concordati con la precisione richiesta;
 			\item \textbf{Interoperabilità}: capacità di interagire ed operare con uno o più sistemi specificati;
 			\item \textbf{Conformità}: capacità di aderire a standard;
 			\item \textbf{Sicurezza}: capacità di proteggere informazioni e dati.
