--- a/DocumentiInterni/StudioDiFattibilita/src/C1/main.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/C1/main.tex
@@ -29,9 +29,9 @@ Nel contesto della continua diffusione della pandemia di COVID-19, l'obiettivo d
 \begin{itemize}
 \item Identificazione del soggetto e dello spazio fisico di lavoro tramite tag \glo{RFID};
 \item La tracciatura deve avvenire in tempo reale ed essere memorizzata, immutabile e certificata;
-\item Realizzazione di un server centralizzato, correlato di una \glo{UI} con una procedura di autenticazione ed attraverso il quale deve essere possibile:
+\item Realizzazione di un server centralizzato, corredato di una \glo{UI} con una procedura di autenticazione ed attraverso il quale deve essere possibile:
 \begin{itemize}
-\item Gestire più stanze, postazioni, personale ed utenti, con possibilità di creare, modificare ed eliminare;
+\item Gestire più stanze, postazioni, personale ed utenti, con possibilità di creare, modificare ed eliminare gli stessi;
 \item Sapere in ogni momento se la stanza o postazione è occupata, prenotata, da pulire o pulita (la visualizzazione deve seguire uno schema che mostri la stanza con le postazioni di diverso colore a seconda del relativo stato);
 \item Monitorare il numero di dipendenti presenti in tutte le postazioni e nella stanza nel suo complesso;
 \item Bloccare le prenotazioni per una determinata stanza;
@@ -46,9 +46,9 @@ Nel contesto della continua diffusione della pandemia di COVID-19, l'obiettivo d
 \item Ricevere  un  elenco  delle  stanze  che  necessitano l’igienizzazione;
 \item Recuperare uno storico delle postazioni occupate e igienizzate;
 \end{itemize}
-\item Le autorizzazioni di accesso si devono distinguere in due macro-tipologie di soggetti: Amministratore di sistema (ha accesso al server) e Utente, il quale può essere l'utilizzatore della postazione o l'addetto alla pulizia (anche l'utilizzatore può pulire la postazione con un apposito kit);
+\item Le autorizzazioni di accesso si devono distinguere in due macro-tipologie di soggetti: Amministratore di sistema e Utente;
 \item Poichè il lettore \glo{RFID} consuma molta batteria al dispositivo è richiesto di trovare il tempo sufficiente a garantire il giusto bilanciamento tra consumo batteria e scansioni, il tutto con test e report delle scelte fatte;
-\item Avere le componenti applicative correlate da test unitari e d’integrazione. Inoltre, è richiesto che il sistema venga testato nella sua interezza tramite test \glo{end-to-end}, con copertura all'80 percento, correlati da report;
+\item Avere le componenti applicative corredate da test unitari e d’integrazione. Inoltre, è richiesto che il sistema venga testato nella sua interezza tramite test \glo{end-to-end}, con copertura all'80 percento, correlati da report;
 \item Realizzazione di un'adeguata documentazione.
 \end{itemize}
 
