--- a/DocumentiInterni/StudioDiFattibilita/src/C2/src/Informazioni_generali.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/C2/src/Informazioni_generali.tex
@@ -1,5 +1,1 @@
-\begin{itemize}
-\item {\bf Nome:} 	EmporioLambda: piattaforma di e-commerce in stile Serverless;
-\item {\bf Proponente:} Red Babel;
-\item {\bf Committente:} Prof. Tullio Vardanega e Prof. Riccardo Cardin.
-\end{itemize}
+Il capitolato in questione si chiama EmporioLambda: piattaforma di e-commerce in stile Serverless", il proponente \`{e} l'azienda Red Babel e i committenti sono i professori Tullio Vardanega e Riccardo Cardin
