--- a/DocumentiInterni/StudioDiFattibilita/src/C2/src/Vincoli.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/C2/src/Vincoli.tex
@@ -8,26 +8,26 @@ Le funzionalità richieste sono le seguenti.
         \end{itemize}
     \item {\textbf{Pagina dell'elenco dei prodotti}}: il consumatore può:
         \begin{itemize}
-            \item seleziona più articoli del prodotto;
-            \item aggiungiungere i prodotti selezionati nel carrello;
+            \item selezionare più articoli del prodotto;
+            \item aggiungere i prodotti selezionati nel carrello;
             \item accedere alla pagina del carrello.
         \end{itemize}
     \item {\textbf{Pagina della descrizione dei prodotti}}: il consumatore può:
         \begin{itemize}
             \item vedere le Informazioni del prodotto;
-            \item aggiungiungere il prodotto nel carrello;
-            \item fare clic sul collegamento per reindirizzare alla pagina del carrello degli acquisti.
+            \item aggiungere il prodotto nel carrello;
+            \item fare clic sul collegamento per essere reindirizzato alla pagina del carrello degli acquisti.
         \end{itemize}
     \item {\textbf{Pagina del carrello}}: il consumatore può:
         \begin{itemize}
-            \item vedere tutti i prodotti aggiungi;
-            \item rivedere il prezzo totale e l'IVA totale;
-            \item procedere alla cassa.
+            \item vedere tutti i prodotti aggiunti;
+            \item vedere il prezzo totale e l'IVA totale;
+            \item procedere al pagamento.
         \end{itemize}
     \item {\textbf{Il profilo}}: l'utente registrato può:
         \begin{itemize}
             \item aggiornare le informazioni del profilo;
-            \item avere una cronologia di tutti gli ordini che ha effettuato sul sito web.
+            \item visualizzare la cronologia di tutti gli ordini che ha effettuato sul sito web.
         \end{itemize}
     \item {\textbf{Pagina della cassa}}: l'utente può:
         \begin{itemize}
