--- a/DocumentiInterni/StudioDiFattibilita/src/C3/main.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/C3/main.tex
@@ -3,7 +3,7 @@ Il capitolato in esame è intitolato "GDP Gathering Detection Platform", propost
 \subsection{Descrizione del capitolato}
 L'azienda propone la creazione di un prototipo software in grado di acquisire ed elaborare dei dati per fornire una panoramica sulle possibili zone di assembramento di persone.
 Questi dati potranno essere acquisiti da telecamere, contapersone, servizi Google, orari dei mezzi di trasporto pubblici e flussi di prenotazione Uber.
-Grazie a questi dati si può riuscire a "mappare" le aree con più affluenza, e cercare di prevenire gli ingorghi.
+Grazie a questi dati si può riuscire a "mappare" le aree con più affluenza, e cercare di prevenire affollamenti.
 \subsection{Prerequisiti}
 \begin{itemize}
     \item competenze nell'elaborazione di big data;
@@ -53,7 +53,7 @@ Grazie a questi dati si può riuscire a "mappare" le aree con più affluenza, e 
     \item i dati saranno di forme diverse in base alla fonte, pertanto dovranno essere messi in relazione tipi di dati diversi, portano probabilmente a problematiche da risolvere.
 \end{itemize}
 \subsection{Conclusioni}
-Il capitolato lascia molta libertà di implementazione, ma guidando gli studenti con suggetimenti sulle tecnologie da utilizzare.
+Il capitolato lascia molta libertà di implementazione, guidando per\`{o} gli studenti con suggerimenti sulle tecnologie da utilizzare.
 Non presenta vincoli stringenti, gli unici richiesti sono "di base" per fornire un software usabile.
 Sebbene inizialmente non avesse suscitato molto interesse, è stato scelto come terza preferenza per la possibilità di arricchimento delle competenze personali
-riguardanti l'analisi di dati e sviluppo di interfaccie web sia front che back end.
+riguardanti l'analisi di dati e sviluppo di interfacce web sia front che back-end.
