--- a/DocumentiInterni/StudioDiFattibilita/src/C5/main.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/C5/main.tex
@@ -1,7 +1,7 @@
 \subsection{Informazioni generali}
 Il capitolato in esame è intitolato "PORTACS: piattaforma di controllo mobilità autonoma", proposto dall'azienda Sanmarco Informatica mentre i committenti sono il Prof. Tullio Vardanega ed il Prof. Riccardo Cardin.
 \subsection{Descrizione del capitolato}
-L'azienda propone la creazione di un motore di elaborazione in tempo reale, che gestisca delle entità guidandole attraverso percorsi evitando collisioni ed eventualmente trovando i percorsi più convenienti.
+L'azienda propone la creazione di un motore di elaborazione in tempo reale che gestisca delle entità guidandole attraverso percorsi, evitando collisioni ed eventualmente trovando i percorsi più convenienti.
 Il sistema centrale deve indicare ad ogni entità la prossima mossa per raggiungere il \glo{POI}, tenendo conto della mappa fornita con tutte le sue caratteristiche (limiti di corsie, sensi unici..).
 \subsection{Prerequisiti}
 \begin{itemize}
@@ -10,8 +10,6 @@ Il sistema centrale deve indicare ad ogni entità la prossima mossa per raggiung
 \end{itemize}
 \subsection{Tecnologie Coinvolte}
 \begin{itemize}
-    \item Git;
-    \item container software;
     \item diagrammi UML.
 \end{itemize}
 \subsection{Vincoli}
@@ -24,7 +22,7 @@ Il sistema centrale deve indicare ad ogni entità la prossima mossa per raggiung
 \begin{itemize}
     \item formazione di competenze in ambito di real-time monitoring and analysis;
     \item il capitolato introduce alle problematiche del mondo della logistica, ambito molto informatizzato;
-    \item non è richiesta l'implementazione di algoritmi di ricerca operativa, che complicherebbero di molto lo sviluppo dell'algoritmo.
+    \item non è richiesta l'implementazione di algoritmi di ricerca operativa che complicherebbero di molto lo sviluppo dell'algoritmo.
 \end{itemize}
 \subsection{Aspetti critici}
 \begin{itemize}
