--- a/DocumentiInterni/StudioDiFattibilita/src/C6/main.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/C6/main.tex
@@ -1,18 +1,17 @@
 \subsection{Informazioni generali}
-Il capitolato in questione si chiama "Progettazione e sviluppo di una {Real-time Gaming Platform (RGP)}", il proponente è l'azienda Zero12 e i committenti sono Tullio Vardanega e Cardin Riccardo.
+Il capitolato in questione si chiama "Progettazione e sviluppo di una {Real-time Gaming Platform (RGP)}", il proponente è l'azienda Zero12 e i committenti sono i professori Tullio Vardanega e Riccardo Cardin.
 
 \subsection{Descrizione del capitolato}
 L’azienda Zero12 propone la creazione di un \glo{Realtime system} per la \glo{sincronizzazione} di un gioco a scorrimento verticale, multiplayer ed un'applicazione \glo{Android} o \glo{iOS} con finalità di \glo{testing} del software sviluppato che gestisce le varie componenti(RGP).
 La finalità da parte dell’azienda è vedere alcuni servizi che propone il pacchetto di AWS in azione nell’ambito real-time, ovvero la sincronizzazione dei giocatori in un gioco multiplayer a scorrimento verticale "infinito".
 \subsection{Prerequisiti}
 \begin{itemize}
-\item training sulle tecnologie coinvolte
-\item analisi della tematica coinvolta RGP 
+\item training sulle tecnologie coinvolte;
+\item analisi della tematica coinvolta RGP; 
 \end{itemize}
 \subsection{Tecnologie coinvolte}
 \begin{itemize}
 \item Utilizzo di \glo{Kotlin}/\glo{Swift} per lo sviluppo del applicativo mobile;
-\item Utilizzo di un \glo{IDE} per la creazione di applicazioni mobile (Android o iOS);
 \item \glo{Node.js} per lo sviluppo del server \glo{backend};
 \item \glo{Typescript}/\glo{Javascript} linguaggi di programmazione per il framework backend richiesto;
 \item \glo{API} \glo{REST} attraverso le quali sia possibile interagire con l'applicativo;
@@ -26,7 +25,7 @@ La finalità da parte dell’azienda è vedere alcuni servizi che propone il pac
 \item Creazione di un'applicazione Android o iOS di un gioco \glo{multiplayer}(da 2 a 6 giocatori) a scrolling verticale a piacere della tipologia \glo{PvE}"Player versus environment" infinito, con relativa interfaccia grafica;
 \item Node.Js per le API (Typescript o Javascript) con cui comunicano i vari microservizi dell'applicazione;
 \item tecnologia AWS per la componente server: AppSync o Gamelift per la RGP e DynamoDB per la base di dati;    
-\item sincronizzazione della\glo{UI} e dei dati tra i giocatori (i giocatori vedono e giocano la stessa partita), ma oltre alla partita normale visualizzano il \glo{player-character}( in modo trasparente)controllato dagli altri avversari, fino al termine della partita da parte di tutti i giocatori;
+\item sincronizzazione della\glo{UI} e dei dati tra i giocatori (i giocatori vedono e giocano la stessa partita), ma oltre alla partita normale visualizzano il \glo{player-character} (in modo trasparente) controllato dagli altri avversari, fino al termine della partita da parte di tutti i giocatori;
 \item consegna materiale: documentazione analisi AppSync/Gamelift pre \glo{Design}, Diagramma \glo{UML} \glo{use-cases},\glo{Schema Design} Basi di dati, documentazione API(dettagliata),piano di \glo{unit-test};
 \item accesso al repository del codice sorgente dell'applicativo post produzione e \glo{Bug} \glo{Reporting}.
 \end{itemize}
@@ -37,7 +36,7 @@ La finalità da parte dell’azienda è vedere alcuni servizi che propone il pac
 \item Essendo Android molto diffuso, la documentazione necessaria per realizzare l'applicazione è molto ricca e chiara;
 \item L'azienda ha esposto in modo chiaro i vari vincoli ed i casi d'uso presenti nel capitolato;
 \item L'azienda \`e disponibile a tenere delle sessioni di training sulle tecnologie AWS per spiegarne il funzionamento e l'utilizzo;
-\item Dopo una prima analisi il servizio Gamelift dei vari servizi offerti da Amazon sembra facilitare lo sviluppo della RGP limitando il numero di microservizi da sviluppare, Il vantaggio maggiore è che sposta il focus principale non nella RGP quasi completamente gestita da Gamelift che offre comunque le modifiche necessarie lato server, ma di spostare il focus principale nello sviluppo del gioco stesso,permettendo di ridurre le risorse  di un’azienda verso il gioco.
+\item Dopo una prima analisi il servizio Gamelift dei vari servizi offerti da Amazon sembra facilitare lo sviluppo della RGP limitando il numero di microservizi da sviluppare. Il vantaggio maggiore è che sposta il focus principale non nella RGP quasi completamente gestita da Gamelift che offre comunque le modifiche necessarie lato server, ma di spostare il focus principale nello sviluppo del gioco stesso, permettendo di ridurre le risorse  di un’azienda verso il gioco.
 \end{itemize}
 \subsection{Aspetti critici}
 \begin{itemize}
