--- a/DocumentiInterni/StudioDiFattibilita/src/C7/src/Informazioni_Generali.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/C7/src/Informazioni_Generali.tex
@@ -1,5 +1,1 @@
-\begin{itemize}
-\item {\bf Nome:} 	SSD: soluzioni di sincronizzazione desktop;
-\item {\bf Proponente:} Zextras;
-\item {\bf Committente:} Prof. Tullio Vardanega e Prof. Riccardo Cardin.
-\end{itemize}
+    Il capitolato in questione si chiama "SSD: soluzioni di sincronizzazione desktop", il proponente \`{e} l'azienda Zextras e i committenti sono Prof. Tullio Vardanega e Prof. Riccardo Cardin.
