--- a/DocumentiInterni/StudioDiFattibilita/src/Comandi.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/Comandi.tex
@@ -3,7 +3,7 @@
 \newcommand{\Approvatore}{TODO}
 \newcommand{\Redattori}{\newline Abdelwahad Kandoul \newline Andrea De Tomasi \newline Giovanni Grigoletto
                         \newline Elvis Murtezan}
-\newcommand{\Verificatori}{TODO}
+\newcommand{\Verificatori}{Alessio Trevisan \newline Filippo Pinton \newline Edoardo Caregnato}
 
 
 \newcommand{\pathimg}{../../Shared/logo.png}
@@ -18,4 +18,3 @@
 
 \newcommand{\NdPv}{Norme di Progetto \Versionedoc}
 \newcommand{\Glossariov}{Glossario \Versionedoc}
-\usepackage{comment}
