--- a/DocumentiInterni/StudioDiFattibilita/src/RegistroModifiche.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/RegistroModifiche.tex
@@ -16,6 +16,6 @@
 		0.0.4                  & 2020-12-11                                       & stesura C2 e C7                     & Abdelwahad Kandoul & \redattore{}    \\
         0.0.3                  & 2020-12-11                                       & stesura C3 e C5    					& Andrea De Tomasi & \redattore{}    \\
         0.0.2                  & 2020-12-11                                       & stesura C1 e C4   					& Giovanni Grigoletto& \redattore{} \\        
-        0.0.1                  & 2020-12-4                                       & stesura documento iniziale e di C6 & Elvis Murtezan & \responsabile{} \\
+        0.0.1                  & 2020-12-4                                       & stesura C6 & Elvis Murtezan & \redattore{} \\
     \end{longtable}
 }
