--- a/DocumentiInterni/StudioDiFattibilita/src/C7/src/Aspetti_positivi.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/C7/src/Aspetti_positivi.tex
@@ -1,5 +1,5 @@
 \begin{itemize}
-\item uno delle tecnologie interessate (QT) è stata oggetto di precedente progetto universitario quindi già conosciuto;
-\item possibilità di imparare ad utilizzare nuovo linguaggio di programmazione come Python;
-\item il capitolato non contiene molti requisiti obbligatori di conseguenza rende maggiormente flessibile la quantità di requisiti da gestire;
+\item una delle tecnologie interessate (QT) è stata oggetto di un precedente progetto universitario, pertanto risulta già nota;
+\item possibilità di imparare ad utilizzare un nuovo linguaggio di programmazione come Python;
+\item il capitolato non contiene molti requisiti obbligatori, di conseguenza rende maggiormente flessibile la quantità di requisiti da gestire;
 \end{itemize}
