--- a/DocumentiInterni/StudioDiFattibilita/src/Introduzione/main.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/Introduzione/main.tex
@@ -11,7 +11,7 @@ Questo documento contiene la stesura dello studio di fattibilità riguardante i 
 \end{itemize}
 Infine, per ogni capitolato vengono esposte le motivazioni e le ragioni per cui il gruppo ha scelto come progetto il capitolato C1 \NomeProgetto{}, in particolare l’interesse del gruppo a tale capitolato è stato cruciale nella decisone finale.
 \subsection{Glossario}
-Al fine di evitare ambiguità tra stakeholder, il gruppo Sweleven ha redatto un documento denominato \Glossariov, che definisce la terminologia utilizzata per la realizzazione del presente documento.
+Al fine di evitare ambiguità tra stakeholder, il gruppo Sweleven ha redatto un documento denominato \Glossariov{} che definisce la terminologia utilizzata per la realizzazione del presente documento.
 In tale documento, sono presenti tutti i termini tecnici, ambigui, specifici del progetto con le loro relative definizioni.
 Un termine presente nel \Glossariov e utilizzato in questo documento viene indicato con un apice G alla fine della parola.
 \subsection{Riferimenti}
