--- a/DocumentiEsterni/PianoDiQualifica/main.tex
+++ b/DocumentiEsterni/PianoDiQualifica/main.tex
@@ -43,6 +43,9 @@
 \section{Standard di qualità}\label{sec:Standard-di-qualita}
 \input{src/StandardQualita/main.tex}
 
+\section{Ciclo di Deming o PDCA}\label{sec:Ciclo-di-Deming}
+\input{src/CicloDeming/main.tex}
+
 \newpage
 \section{Resoconto verifica}\label{sec:Resoconto-verifica}
 \input{src/ResocontoVerifica/main.tex}
