--- a/DocumentiEsterni/Glossario/src/RegistroModifiche.tex
+++ b/DocumentiEsterni/Glossario/src/RegistroModifiche.tex
@@ -13,7 +13,8 @@
         % usare \responsabile per indicare responsabile
 
         %		L'ultimo evento deve essere sempre all'inizio della tabella
-        0.0.1                  & 2020-12-01                                       & Stesura Iniziale del documento              & Elvis Murtezan & \responsabile{} \\
+        0.0.2                  & 2021-01-09                                       & Aggiunta di alcuni termini                            & Andrea De Tomasi & \redattore{}\\
+        0.0.1                  & 2020-12-01                                       & Stesura iniziale del documento              & Elvis Murtezan & \responsabile{} \\
         X.X.X                  & XXXX-XX-XX                                       & Verifica                                    & TODO & \verificatore{} \\
         X.X.X                  & XXXX-XX-XX                                       & Descrizione edit                            & TODO & \redattore{}    \\
     \end{longtable}
