--- a/DocumentiEsterni/Glossario/src/Alfabeto/B.tex
+++ b/DocumentiEsterni/Glossario/src/Alfabeto/B.tex
@@ -9,6 +9,9 @@
 \TermineGlossario{Baseline}
 \DefinizioneGlossario{È un insieme di configuration item in un dato istante temporale (milestone), verificato, base per l'avanzamento del progetto.}
 
+\TermineGlossario{Blockchain}
+\DefinizioneGlossario{È una struttura dati condivisa e "immutabile", definita come un registro digitale le cui voci sono raggruppate in "blocchi", concatenati in ordine cronologico, e la cui integrità è garantita dall'uso della crittografia.}
+
 \TermineGlossario{Beacon (Bluetooth)}
 \DefinizioneGlossario{Sono dei trasmettitori hardware (classe di dispositivi Bluetooth a bassa energia LE) che trasmettono il loro identificatore a dispositivi elettronici portatili vicini.}
 
